[package]
name = "konfig"
version.workspace = true
edition.workspace = true
publish = false
homepage.workspace = true
repository.workspace = true

[[bin]]
name = "konfig"
path = "main.rs"

[lib]
name = "konfig"
path = "lib.rs"

[features]
integration = []
# Enables in-process pyroscope-rs CPU profiling agent. The agent is only
# started at runtime if PYROSCOPE_SERVER_ADDRESS is set; this feature gates
# whether the pyroscope crates are compiled in at all. Off by default so
# the default `konfig` image stays slim — opt in via the `konfig-profiling`
# image variant.
profiling = ["dep:pyroscope", "dep:pyroscope_pprofrs"]
# Enables the tokio-console (console-subscriber) tracing layer. Off by
# default; when enabled, set `RUST_CONSOLE=1` at runtime to install the
# console gRPC server on the default port (6669) for `tokio-console` clients.
tokio_console = ["dep:console-subscriber"]

[[test]]
name = "integration_watcher"
path = "tests/integration_watcher.rs"
required-features = ["integration"]

[[test]]
name = "integration_watch_timing"
path = "tests/integration_watch_timing.rs"
required-features = ["integration"]

[[test]]
name = "integration_grpc"
path = "tests/integration_grpc.rs"
required-features = ["integration"]

[[test]]
name = "cp_integration"
path = "tests/cp_integration.rs"
required-features = ["integration"]

[dependencies]
arc-swap = {workspace = true}
async-trait = {workspace = true}
axum = {version = "0.8", default-features = false, features = ["tokio", "http1"]}
base64 = {workspace = true}
bytes = {workspace = true}
clap = {version = "4", features = ["derive", "env"]}
dashmap = {workspace = true}
futures-util = "0.3"
kube = {version = "0.98", features = ["runtime", "client"]}
k8s-openapi = {version = "0.24", features = ["v1_31"]}
lazy_static = "1"
prometheus = {version = "0.14", default-features = false}
prost = {workspace = true}
tonic-prost = {workspace = true}
serde = {workspace = true}
serde_json = {workspace = true}
serde_yaml = "0.9"
tokio = {workspace = true, features = ["full", "tracing"]}
tokio-stream = "0.1"
tonic = {workspace = true}
tonic-health = "0.14.6"
tracing = {workspace = true}
tracing-subscriber = {version = "0.3", features = ["env-filter"]}
thiserror = {workspace = true}
# Tokio runtime metrics — exported via the existing /metrics Prometheus
# endpoint. Requires `--cfg tokio_unstable` (set in .bazelrc + .cargo/config.toml).
tokio-metrics = {version = "0.4", default-features = false, features = ["rt"]}
# Optional — pulled in by the `profiling` feature; the default `konfig`
# image is built without these so it stays slim.
pyroscope = {version = "0.5", optional = true}
pyroscope_pprofrs = {version = "0.2", optional = true}
# Optional — pulled in by the `tokio_console` feature. Off by default so the
# default image stays slim; opt in if you want to attach a `tokio-console`
# client to the running process.
console-subscriber = {version = "0.4", optional = true}

[build-dependencies]
tonic-prost-build = {workspace = true}

[dev-dependencies]
tokio = {version = "1.52.3", features = ["test-util"]}

[lints.clippy]
std_instead_of_core = "allow"
std_instead_of_alloc = "allow"
