load("@rules_rust//rust:defs.bzl", "rust_binary", "rust_clippy", "rustfmt_test")

# Use @rules_rust//rust:defs.bzl directly (not //bazel/rust:defs.bzl) —
# the custom macro adds //rust/util/malloc which isn't visible to //tools.
rust_binary(
    name = "konfig_cli",
    srcs = glob(["src/**/*.rs"]),
    tags = ["konfig", "cli", "rust"],
    visibility = ["//visibility:public"],
    deps = [
        "//rust/konfig",
        "@konfig_crates//:base64",
        "@konfig_crates//:clap",
        "@konfig_crates//:k8s-openapi",
        "@konfig_crates//:kube",
        "@konfig_crates//:serde_json",
        "@konfig_crates//:serde_yaml",
        "@konfig_crates//:tokio",
        "@konfig_crates//:tracing",
        "@konfig_crates//:tracing-subscriber",
    ],
)

rustfmt_test(
    name = "fmt_test",
    size = "small",
    tags = ["konfig", "cli", "rust", "unit"],
    targets = [":konfig_cli"],
)

rust_clippy(
    name = "clippy_test",
    testonly = True,
    tags = ["konfig", "cli", "rust", "unit"],
    deps = [":konfig_cli"],
)
