load("@rules_rust//rust:defs.bzl", "rust_binary", "rust_clippy", "rustfmt_test")

rust_binary(
    name = "konfig_loadtest",
    srcs = ["src/main.rs"],
    tags = ["konfig", "loadtest", "rust"],
    visibility = ["//docker/konfig-loadtest:__pkg__"],
    deps = [
        "//rust/konfig",
        "@konfig_crates//:clap",
        "@konfig_crates//:futures-util",
        "@konfig_crates//:tokio",
        "@konfig_crates//:tonic",
        "@konfig_crates//:tracing",
        "@konfig_crates//:tracing-subscriber",
    ],
)

rustfmt_test(
    name = "fmt_test",
    size = "small",
    tags = ["konfig", "loadtest", "rust", "unit"],
    targets = [":konfig_loadtest"],
)

rust_clippy(
    name = "clippy_test",
    testonly = True,
    tags = ["konfig", "loadtest", "rust", "unit"],
    deps = [":konfig_loadtest"],
)
